7 February 2014: Wouter
	- Fix #551: Change Regents to Copyright holder in License.

28 January 2014: Wouter
	- Added patch to networkmanager dispatcher script and also
	  an example dnssec.conf file from Tomas Hozza.

21 January 2014: Wouter
	- Added contrib networkmanager dispatcher script from Tomas Hozza.

25 November 2013: Wouter
	- Added fedora/dnssec-trigger-resolvconf-handle.sh from Tomas
	  Hozza, that will backup and restore resolv.conf for use in
	  systemd.service scripts and networkmanager scripts.

15 November 2013: Wouter
	- Patch from Tomas Hozza that improves text in dialogs (on linux).

14 November 2013: Wouter
	- Fix NM dispatcher script to work with NM >= 0.9.9.0 (Thanks Tomas
	  Hozza).

26 August 2013: Wouter
	- Fix#522: Errors found by static analysis of source from Tomas Hozza.

6 August 2013: Wouter
	- Patch from Tomas Hozza to improve the networkmanager connect
	  script for VPN connections.  It adds forward zones for the VPN
	  over the VPN connection.

3 May 2013: Wouter
	- Update acx_nlnetlabs.m4 to deal with newer mingw and sleep.

2 May 2013: Wouter
	- Fixup new glib deprecated calls.

1 May 2013: Wouter
	- Let system dealloc feed and feed_lock on OSX and Linux/BSD.

22 April 2013: Wouter
	- Fixup OSX backquote backslashes.  Removed wrong OSX version from
	  its installer text.

19 April 2013: Wouter
	- Fixup snprintf return value usage.

8 April 2013: Wouter
	- OSX wake listener implementation.
	- patch for OSX that passes all domains from search to the OS (from
	  Phil Pennock).

27 March 2013: Wouter
	- update makedist for new svn and new crosscompile environment.

26 March 2013: Wouter
	- Update configure, install-sh with newer autoconf.

7 March 2013: Wouter
	- bug 489: removed Application deprecated keyword from .desktop file.

31 July 2012: Wouter
	- Fixup uniqueid for Mountain Lion OSX 10.8 release, you have to
	  run the installer again (upgrade or uninstall-reinstall).

2 July 2012: Wouter