@@ -41,29 +41,8 @@ restore_resolv_conf()
     if [ "`does_nm_handle_resolv_conf`" -eq 0 ] && [ -s $RESOLV_CONF_BAK ]; then
         cp -fp $RESOLV_CONF_BAK $RESOLV_CONF
     else
-        # get global nameservers
-        # try to get nmcli version
-        NMCLI_VER="`nmcli -v 2> /dev/null | sed 's/.*version \([0-9]\)\.\([0-9]\)\.\([0-9]\)\.\([0-9]\).*/\1\2\3\4/'`"
-        # if nmcli exists
-        if [ -n $NMCLI_VER ]; then
-            # if the version is greater or equal 0.9.9.0
-                if [ $NMCLI_VER -ge 0990 ]; then
-                    global_nameservers="`nmcli -f IP4,IP6 dev show | fgrep 'DNS' | awk '{print $2;}'`"
-                else
-                    global_nameservers="`nmcli -f IP4,IP6 dev list | fgrep 'DNS' | awk '{print $2;}'`"
-                fi
-        # nmcli does not exist
-        else
-            global_nameservers="`nm-tool | grep 'DNS:' | awk '{print $2;}'`"
-        fi
-        # fix whitespaces
-        global_nameservers="`echo $global_nameservers`"
-
-        # write servers to the resolv.conf
-        echo "# generated by $SCRIPT_NAME script" > $RESOLV_CONF
-        for server in $global_nameservers ; do
-            echo "nameserver $server" >> $RESOLV_CONF
-        done
+        # let NM rewrite the resolv.conf
+        systemctl restart NetworkManager.service
     fi
 }
 
