@@ -1,15 +1,12 @@
 [Unit]
 Description=dnssec-triggerd Control Key And Certificate Generator
-After=syslog.target 
-Before=dnssec-triggerd.service
+After=syslog.target
 ConditionPathExists=!/etc/dnssec-trigger/dnssec_trigger_control.key
 
 [Service]
 Type=oneshot
-#Group=dnssec-trigger
 ExecStart=/usr/sbin/dnssec-trigger-control-setup -d /etc/dnssec-trigger/
 ExecStart=/sbin/restorecon /etc/dnssec-trigger/*
-RemainAfterExit=yes
 
 [Install]
 WantedBy=multi-user.target
