@@ -1,3 +1,9 @@
+13 February 2014: Wouter
+	- Patches from Tomass Hozza; Explicitly-use-Python2-interpreter,
+	  Fix-situation-when-connection-is-going-down,
+	  resolv.conf-backup-script-restart-NM-to-handle-resolv.conf,
+	  Update-systemd-service-files-to-latest-version-used.
+
 7 February 2014: Wouter
 	- Fix #551: Change Regents to Copyright holder in License.
 
